# simpl-webapp

./: README.md  pyproject.toml  readmanga_top_week.py  readmanga_tor_week.html  server.py  setup.cfg  weather.py
templates/: index.html
