[tool.poetry]
name = "simpl-webapp"
version = "0.1.0"
description = "simpl-webapp tutorial with learn python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
